d.output
Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList
    2        | LibraryDeclarations
    3        | LibraryDeclarations GlobalStatementList

    4 LibraryDeclarations: LibraryDeclaration
    5                    | LibraryDeclarations LibraryDeclaration

    6 LibraryDeclaration: IMPORT DotID ';'

    7 GlobalStatementList: GlobalStatement
    8                    | GlobalStatementList GlobalStatement

    9 GlobalStatement: VariableDeclaration ';'
   10                | FunctionDeclaration ';'
   11                | FunctionDefination

   12 FunctionDefination: VOID ID '(' Parameters ')' ComposeStatement
   13                   | VOID ID '(' ')' ComposeStatement
   14                   | BasicType ID '(' ')' ComposeStatement
   15                   | BasicType ID '(' Parameters ')' ComposeStatement
   16                   | BasicType ArrayType ID '(' ')' ComposeStatement
   17                   | BasicType ArrayType ID '(' Parameters ')' ComposeStatement

   18 ComposeStatement: '{' '}'
   19                 | '{' LocalStatementList '}'

   20 LocalStatementList: LocalStatement
   21                   | LocalStatementList LocalStatement

   22 LocalStatement: ';'
   23               | Expression ';'
   24               | VariableDeclaration ';'
   25               | IF '(' Expression ')' ScopeStatement
   26               | IF '(' Expression ')' ScopeStatement ELSE ScopeStatement
   27               | DO ScopeStatement WHILE '(' Expression ')' ';'
   28               | WHILE '(' Expression ')' ScopeStatement
   29               | SWITCH '(' Expression ')' '{' CaseStatements '}'
   30               | SWITCH '(' Expression ')' '{' CaseStatements DefaultStatement '}'
   31               | BREAK ';'
   32               | CONTINUE ';'
   33               | FOR '(' BasicType Declarator ';' Expression ';' Expression ')' ScopeStatement
   34               | FOR '(' Declarator ';' Expression ';' Expression ')' ScopeStatement
   35               | RETURN Expression ';'

   36 CaseStatements: CaseStatement
   37               | CaseStatements CaseStatement

   38 CaseStatement: CASE Expression ':' LocalStatementList
   39              | CASE Expression ':' ComposeStatement

   40 DefaultStatement: DEFAULT ':' LocalStatementList
   41                 | DEFAULT ':' ComposeStatement

   42 ScopeStatement: LocalStatement
   43               | ComposeStatement

   44 Arguments: Expression
   45          | Arguments ',' Expression

   46 Expression: INTVAL
   47           | FLOATVAL
   48           | CHARVAL
   49           | STRINGVAL
   50           | ID
   51           | Expression '=' Expression
   52           | Expression '+' Expression
   53           | Expression '-' Expression
   54           | Expression '*' Expression
   55           | Expression '/' Expression
   56           | Expression '~' Expression
   57           | Expression ADD_ASS Expression
   58           | Expression SUB_ASS Expression
   59           | Expression MUL_ASS Expression
   60           | Expression DIV_ASS Expression
   61           | Expression CAT_ASS Expression
   62           | Expression AND_AND Expression
   63           | Expression OR_OR Expression
   64           | Expression EQ Expression
   65           | Expression NEQ Expression
   66           | Expression '>' Expression
   67           | Expression '<' Expression
   68           | Expression GE Expression
   69           | Expression LE Expression
   70           | '!' Expression
   71           | '-' Expression
   72           | ADD_ADD Expression
   73           | SUB_SUB Expression
   74           | Expression ADD_ADD
   75           | Expression SUB_SUB
   76           | '(' Expression ')'
   77           | ID '(' ')'
   78           | ID '(' Arguments ')'
   79           | Expression '[' Expression ']'
   80           | WRITELN '(' Expression ')'
   81           | READLN '(' Expression ')'

   82 FunctionDeclaration: VOID ID '(' PrototypeParameters ')'
   83                    | VOID ID '(' Parameters ')'
   84                    | VOID ID '(' ')'
   85                    | BasicType ID '(' PrototypeParameters ')'
   86                    | BasicType ID '(' Parameters ')'
   87                    | BasicType ID '(' ')'
   88                    | BasicType ArrayType ID '(' ')'
   89                    | BasicType ArrayType ID '(' PrototypeParameters ')'
   90                    | BasicType ArrayType ID '(' Parameters ')'

   91 PrototypeParameters: PrototypeParameter
   92                    | PrototypeParameters ',' PrototypeParameter

   93 Parameters: Parameter
   94           | Parameters ',' Parameter

   95 Parameter: BasicType ArrayType ID
   96          | BasicType ID

   97 PrototypeParameter: BasicType
   98                   | BasicType ArrayType

   99 VariableDeclaration: CONST BasicType Declarators
  100                    | BasicType Declarators
  101                    | BasicType ArrayType Declarators
  102                    | CONST BasicType ArrayType Declarators

  103 BasicType: INT
  104          | FLOAT
  105          | CHAR

  106 ArrayType: '[' INTVAL ']'
  107          | ArrayType '[' INTVAL ']'

  108 Declarators: Declarator
  109            | Declarators ',' Declarator

  110 Declarator: ID
  111           | ID '=' Expression

  112 DotID: ID
  113      | DotID '.' ID


Terminals, with rules where they appear

$end (0) 0
'!' (33) 70
'(' (40) 12 13 14 15 16 17 25 26 27 28 29 30 33 34 76 77 78 80 81 82
    83 84 85 86 87 88 89 90
')' (41) 12 13 14 15 16 17 25 26 27 28 29 30 33 34 76 77 78 80 81 82
    83 84 85 86 87 88 89 90
'*' (42) 54
'+' (43) 52
',' (44) 45 92 94 109
'-' (45) 53 71
'.' (46) 113
'/' (47) 55
':' (58) 38 39 40 41
';' (59) 6 9 10 22 23 24 27 31 32 33 34 35
'<' (60) 67
'=' (61) 51 111
'>' (62) 66
'[' (91) 79 106 107
']' (93) 79 106 107
'{' (123) 18 19 29 30
'}' (125) 18 19 29 30
'~' (126) 56
error (256)
INTVAL (258) 46 106 107
FLOATVAL (259) 47
STRINGVAL (260) 49
ID (261) 12 13 14 15 16 17 50 77 78 82 83 84 85 86 87 88 89 90 95 96
    110 111 112 113
CHARVAL (262) 48
BREAK (263) 31
CONTINUE (264) 32
DEFAULT (265) 40 41
RETURN (266) 35
IF (267) 25 26
WHILE (268) 27 28
DO (269) 27
CASE (270) 38 39
SWITCH (271) 29 30
FOR (272) 33 34
IMPORT (273) 6
CONST (274) 99 102
INT (275) 103
FLOAT (276) 104
CHAR (277) 105
VOID (278) 12 13 82 83 84
ADD_ADD (279) 72 74
SUB_SUB (280) 73 75
READLN (281) 81
WRITELN (282) 80
ADD_ASS (283) 57
SUB_ASS (284) 58
MUL_ASS (285) 59
DIV_ASS (286) 60
CAT_ASS (287) 61
OR_OR (288) 63
AND_AND (289) 62
EQ (290) 64
NEQ (291) 65
LE (292) 69
GE (293) 68
ADDADDB (294)
SUBSUBB (295)
UMINUS (296)
ADDADDA (297)
SUBSUBA (298)
ELSE (299) 26


Nonterminals, with rules where they appear

$accept (64)
    on left: 0
Program (65)
    on left: 1 2 3, on right: 0
LibraryDeclarations (66)
    on left: 4 5, on right: 2 3 5
LibraryDeclaration (67)
    on left: 6, on right: 4 5
GlobalStatementList (68)
    on left: 7 8, on right: 1 3 8
GlobalStatement (69)
    on left: 9 10 11, on right: 7 8
FunctionDefination (70)
    on left: 12 13 14 15 16 17, on right: 11
ComposeStatement (71)
    on left: 18 19, on right: 12 13 14 15 16 17 39 41 43
LocalStatementList (72)
    on left: 20 21, on right: 19 21 38 40
LocalStatement (73)
    on left: 22 23 24 25 26 27 28 29 30 31 32 33 34 35, on right: 20
    21 42
CaseStatements (74)
    on left: 36 37, on right: 29 30 37
CaseStatement (75)
    on left: 38 39, on right: 36 37
DefaultStatement (76)
    on left: 40 41, on right: 30
ScopeStatement (77)
    on left: 42 43, on right: 25 26 27 28 33 34
Arguments (78)
    on left: 44 45, on right: 45 78
Expression (79)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81, on right:
    23 25 26 27 28 29 30 33 34 35 38 39 44 45 51 52 53 54 55 56 57
    58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 79 80
    81 111
FunctionDeclaration (80)
    on left: 82 83 84 85 86 87 88 89 90, on right: 10
PrototypeParameters (81)
    on left: 91 92, on right: 82 85 89 92
Parameters (82)
    on left: 93 94, on right: 12 15 17 83 86 90 94
Parameter (83)
    on left: 95 96, on right: 93 94
PrototypeParameter (84)
    on left: 97 98, on right: 91 92
VariableDeclaration (85)
    on left: 99 100 101 102, on right: 9 24
BasicType (86)
    on left: 103 104 105, on right: 14 15 16 17 33 85 86 87 88 89 90
    95 96 97 98 99 100 101 102
ArrayType (87)
    on left: 106 107, on right: 16 17 88 89 90 95 98 101 102 107
Declarators (88)
    on left: 108 109, on right: 99 100 101 102 109
Declarator (89)
    on left: 110 111, on right: 33 34 108 109
DotID (90)
    on left: 112 113, on right: 6 113


State 0

    0 $accept: . Program $end

    IMPORT  shift, and go to state 1
    CONST   shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    CHAR    shift, and go to state 5
    VOID    shift, and go to state 6

    Program              go to state 7
    LibraryDeclarations  go to state 8
    LibraryDeclaration   go to state 9
    GlobalStatementList  go to state 10
    GlobalStatement      go to state 11
    FunctionDefination   go to state 12
    FunctionDeclaration  go to state 13
    VariableDeclaration  go to state 14
    BasicType            go to state 15


State 1

    6 LibraryDeclaration: IMPORT . DotID ';'

    ID  shift, and go to state 16

    DotID  go to state 17


State 2

   99 VariableDeclaration: CONST . BasicType Declarators
  102                    | CONST . BasicType ArrayType Declarators

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    CHAR   shift, and go to state 5

    BasicType  go to state 18


State 3

  103 BasicType: INT .

    $default  reduce using rule 103 (BasicType)


State 4

  104 BasicType: FLOAT .

    $default  reduce using rule 104 (BasicType)


State 5

  105 BasicType: CHAR .

    $default  reduce using rule 105 (BasicType)


State 6

   12 FunctionDefination: VOID . ID '(' Parameters ')' ComposeStatement
   13                   | VOID . ID '(' ')' ComposeStatement
   82 FunctionDeclaration: VOID . ID '(' PrototypeParameters ')'
   83                    | VOID . ID '(' Parameters ')'
   84                    | VOID . ID '(' ')'

    ID  shift, and go to state 19


State 7

    0 $accept: Program . $end

    $end  shift, and go to state 20


State 8

    2 Program: LibraryDeclarations .  [$end]
    3        | LibraryDeclarations . GlobalStatementList
    5 LibraryDeclarations: LibraryDeclarations . LibraryDeclaration

    IMPORT  shift, and go to state 1
    CONST   shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    CHAR    shift, and go to state 5
    VOID    shift, and go to state 6

    $default  reduce using rule 2 (Program)

    LibraryDeclaration   go to state 21
    GlobalStatementList  go to state 22
    GlobalStatement      go to state 11
    FunctionDefination   go to state 12
    FunctionDeclaration  go to state 13
    VariableDeclaration  go to state 14
    BasicType            go to state 15


State 9

    4 LibraryDeclarations: LibraryDeclaration .

    $default  reduce using rule 4 (LibraryDeclarations)


State 10

    1 Program: GlobalStatementList .  [$end]
    8 GlobalStatementList: GlobalStatementList . GlobalStatement

    CONST  shift, and go to state 2
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    CHAR   shift, and go to state 5
    VOID   shift, and go to state 6

    $default  reduce using rule 1 (Program)

    GlobalStatement      go to state 23
    FunctionDefination   go to state 12
    FunctionDeclaration  go to state 13
    VariableDeclaration  go to state 14
    BasicType            go to state 15


State 11

    7 GlobalStatementList: GlobalStatement .

    $default  reduce using rule 7 (GlobalStatementList)


State 12

   11 GlobalStatement: FunctionDefination .

    $default  reduce using rule 11 (GlobalStatement)


State 13

   10 GlobalStatement: FunctionDeclaration . ';'

    ';'  shift, and go to state 24


State 14

    9 GlobalStatement: VariableDeclaration . ';'

    ';'  shift, and go to state 25


State 15

   14 FunctionDefination: BasicType . ID '(' ')' ComposeStatement
   15                   | BasicType . ID '(' Parameters ')' ComposeStatement
   16                   | BasicType . ArrayType ID '(' ')' ComposeStatement
   17                   | BasicType . ArrayType ID '(' Parameters ')' ComposeStatement
   85 FunctionDeclaration: BasicType . ID '(' PrototypeParameters ')'
   86                    | BasicType . ID '(' Parameters ')'
   87                    | BasicType . ID '(' ')'
   88                    | BasicType . ArrayType ID '(' ')'
   89                    | BasicType . ArrayType ID '(' PrototypeParameters ')'
   90                    | BasicType . ArrayType ID '(' Parameters ')'
  100 VariableDeclaration: BasicType . Declarators
  101                    | BasicType . ArrayType Declarators

    ID   shift, and go to state 26
    '['  shift, and go to state 27

    ArrayType    go to state 28
    Declarators  go to state 29
    Declarator   go to state 30


State 16

  112 DotID: ID .

    $default  reduce using rule 112 (DotID)


State 17

    6 LibraryDeclaration: IMPORT DotID . ';'
  113 DotID: DotID . '.' ID

    ';'  shift, and go to state 31
    '.'  shift, and go to state 32


State 18

   99 VariableDeclaration: CONST BasicType . Declarators
  102                    | CONST BasicType . ArrayType Declarators

    ID   shift, and go to state 33
    '['  shift, and go to state 27

    ArrayType    go to state 34
    Declarators  go to state 35
    Declarator   go to state 30


State 19

   12 FunctionDefination: VOID ID . '(' Parameters ')' ComposeStatement
   13                   | VOID ID . '(' ')' ComposeStatement
   82 FunctionDeclaration: VOID ID . '(' PrototypeParameters ')'
   83                    | VOID ID . '(' Parameters ')'
   84                    | VOID ID . '(' ')'

    '('  shift, and go to state 36


State 20

    0 $accept: Program $end .

    $default  accept


State 21

    5 LibraryDeclarations: LibraryDeclarations LibraryDeclaration .

    $default  reduce using rule 5 (LibraryDeclarations)


State 22

    3 Program: LibraryDeclarations GlobalStatementList .  [$end]
    8 GlobalStatementList: GlobalStatementList . GlobalStatement

    CONST  shift, and go to state 2
    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    CHAR   shift, and go to state 5
    VOID   shift, and go to state 6

    $default  reduce using rule 3 (Program)

    GlobalStatement      go to state 23
    FunctionDefination   go to state 12
    FunctionDeclaration  go to state 13
    VariableDeclaration  go to state 14
    BasicType            go to state 15


State 23

    8 GlobalStatementList: GlobalStatementList GlobalStatement .

    $default  reduce using rule 8 (GlobalStatementList)


State 24

   10 GlobalStatement: FunctionDeclaration ';' .

    $default  reduce using rule 10 (GlobalStatement)


State 25

    9 GlobalStatement: VariableDeclaration ';' .

    $default  reduce using rule 9 (GlobalStatement)


State 26

   14 FunctionDefination: BasicType ID . '(' ')' ComposeStatement
   15                   | BasicType ID . '(' Parameters ')' ComposeStatement
   85 FunctionDeclaration: BasicType ID . '(' PrototypeParameters ')'
   86                    | BasicType ID . '(' Parameters ')'
   87                    | BasicType ID . '(' ')'
  110 Declarator: ID .  [',', ';']
  111           | ID . '=' Expression

    '='  shift, and go to state 37
    '('  shift, and go to state 38

    $default  reduce using rule 110 (Declarator)


State 27

  106 ArrayType: '[' . INTVAL ']'

    INTVAL  shift, and go to state 39


State 28

   16 FunctionDefination: BasicType ArrayType . ID '(' ')' ComposeStatement
   17                   | BasicType ArrayType . ID '(' Parameters ')' ComposeStatement
   88 FunctionDeclaration: BasicType ArrayType . ID '(' ')'
   89                    | BasicType ArrayType . ID '(' PrototypeParameters ')'
   90                    | BasicType ArrayType . ID '(' Parameters ')'
  101 VariableDeclaration: BasicType ArrayType . Declarators
  107 ArrayType: ArrayType . '[' INTVAL ']'

    ID   shift, and go to state 40
    '['  shift, and go to state 41

    Declarators  go to state 42
    Declarator   go to state 30


State 29

  100 VariableDeclaration: BasicType Declarators .  [';']
  109 Declarators: Declarators . ',' Declarator

    ','  shift, and go to state 43

    $default  reduce using rule 100 (VariableDeclaration)


State 30

  108 Declarators: Declarator .

    $default  reduce using rule 108 (Declarators)


State 31

    6 LibraryDeclaration: IMPORT DotID ';' .

    $default  reduce using rule 6 (LibraryDeclaration)


State 32

  113 DotID: DotID '.' . ID

    ID  shift, and go to state 44


State 33

  110 Declarator: ID .  [',', ';']
  111           | ID . '=' Expression

    '='  shift, and go to state 37

    $default  reduce using rule 110 (Declarator)


State 34

  102 VariableDeclaration: CONST BasicType ArrayType . Declarators
  107 ArrayType: ArrayType . '[' INTVAL ']'

    ID   shift, and go to state 33
    '['  shift, and go to state 41

    Declarators  go to state 45
    Declarator   go to state 30


State 35

   99 VariableDeclaration: CONST BasicType Declarators .  [';']
  109 Declarators: Declarators . ',' Declarator

    ','  shift, and go to state 43

    $default  reduce using rule 99 (VariableDeclaration)


State 36

   12 FunctionDefination: VOID ID '(' . Parameters ')' ComposeStatement
   13                   | VOID ID '(' . ')' ComposeStatement
   82 FunctionDeclaration: VOID ID '(' . PrototypeParameters ')'
   83                    | VOID ID '(' . Parameters ')'
   84                    | VOID ID '(' . ')'

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    CHAR   shift, and go to state 5
    ')'    shift, and go to state 46

    PrototypeParameters  go to state 47
    Parameters           go to state 48
    Parameter            go to state 49
    PrototypeParameter   go to state 50
    BasicType            go to state 51


State 37

  111 Declarator: ID '=' . Expression

    INTVAL     shift, and go to state 52
    FLOATVAL   shift, and go to state 53
    STRINGVAL  shift, and go to state 54
    ID         shift, and go to state 55
    CHARVAL    shift, and go to state 56
    ADD_ADD    shift, and go to state 57
    SUB_SUB    shift, and go to state 58
    READLN     shift, and go to state 59
    WRITELN    shift, and go to state 60
    '-'        shift, and go to state 61
    '!'        shift, and go to state 62
    '('        shift, and go to state 63

    Expression  go to state 64


State 38

   14 FunctionDefination: BasicType ID '(' . ')' ComposeStatement
   15                   | BasicType ID '(' . Parameters ')' ComposeStatement
   85 FunctionDeclaration: BasicType ID '(' . PrototypeParameters ')'
   86                    | BasicType ID '(' . Parameters ')'
   87                    | BasicType ID '(' . ')'

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    CHAR   shift, and go to state 5
    ')'    shift, and go to state 65

    PrototypeParameters  go to state 66
    Parameters           go to state 67
    Parameter            go to state 49
    PrototypeParameter   go to state 50
    BasicType            go to state 51


State 39

  106 ArrayType: '[' INTVAL . ']'

    ']'  shift, and go to state 68


State 40

   16 FunctionDefination: BasicType ArrayType ID . '(' ')' ComposeStatement
   17                   | BasicType ArrayType ID . '(' Parameters ')' ComposeStatement
   88 FunctionDeclaration: BasicType ArrayType ID . '(' ')'
   89                    | BasicType ArrayType ID . '(' PrototypeParameters ')'
   90                    | BasicType ArrayType ID . '(' Parameters ')'
  110 Declarator: ID .  [',', ';']
  111           | ID . '=' Expression

    '='  shift, and go to state 37
    '('  shift, and go to state 69

    $default  reduce using rule 110 (Declarator)


State 41

  107 ArrayType: ArrayType '[' . INTVAL ']'

    INTVAL  shift, and go to state 70


State 42

  101 VariableDeclaration: BasicType ArrayType Declarators .  [';']
  109 Declarators: Declarators . ',' Declarator

    ','  shift, and go to state 43

    $default  reduce using rule 101 (VariableDeclaration)


State 43

  109 Declarators: Declarators ',' . Declarator

    ID  shift, and go to state 33

    Declarator  go to state 71


State 44

  113 DotID: DotID '.' ID .

    $default  reduce using rule 113 (DotID)


State 45

  102 VariableDeclaration: CONST BasicType ArrayType Declarators .  [';']
  109 Declarators: Declarators . ',' Declarator

    ','  shift, and go to state 43

    $default  reduce using rule 102 (VariableDeclaration)


State 46

   13 FunctionDefination: VOID ID '(' ')' . ComposeStatement
   84 FunctionDeclaration: VOID ID '(' ')' .  [';']

    '{'  shift, and go to state 72

    $default  reduce using rule 84 (FunctionDeclaration)

    ComposeStatement  go to state 73


State 47

   82 FunctionDeclaration: VOID ID '(' PrototypeParameters . ')'
   92 PrototypeParameters: PrototypeParameters . ',' PrototypeParameter

    ','  shift, and go to state 74
    ')'  shift, and go to state 75


State 48

   12 FunctionDefination: VOID ID '(' Parameters . ')' ComposeStatement
   83 FunctionDeclaration: VOID ID '(' Parameters . ')'
   94 Parameters: Parameters . ',' Parameter

    ','  shift, and go to state 76
    ')'  shift, and go to state 77


State 49

   93 Parameters: Parameter .

    $default  reduce using rule 93 (Parameters)


State 50

   91 PrototypeParameters: PrototypeParameter .

    $default  reduce using rule 91 (PrototypeParameters)


State 51

   95 Parameter: BasicType . ArrayType ID
   96          | BasicType . ID
   97 PrototypeParameter: BasicType .  [',', ')']
   98                   | BasicType . ArrayType

    ID   shift, and go to state 78
    '['  shift, and go to state 27

    $default  reduce using rule 97 (PrototypeParameter)

    ArrayType  go to state 79


State 52

   46 Expression: INTVAL .

    $default  reduce using rule 46 (Expression)


State 53

   47 Expression: FLOATVAL .

    $default  reduce using rule 47 (Expression)


State 54

   49 Expression: STRINGVAL .

    $default  reduce using rule 49 (Expression)


State 55

   50 Expression: ID .  [ADD_ADD, SUB_SUB, ',', '=', ADD_ASS, SUB_ASS, MUL_ASS, DIV_ASS, CAT_ASS, OR_OR, AND_AND, EQ, NEQ, '<', LE, '>', GE, '+', '-', '~', '*', '/', '[', ']', ')', ';', ':']
   77           | ID . '(' ')'
   78           | ID . '(' Arguments ')'

    '('  shift, and go to state 80

    $default  reduce using rule 50 (Expression)


State 56

   48 Expression: CHARVAL .

    $default  reduce using rule 48 (Expression)


State 57

   72 Expression: ADD_ADD . Expression

    INTVAL     shift, and go to state 52
    FLOATVAL   shift, and go to state 53
    STRINGVAL  shift, and go to state 54
    ID         shift, and go to state 55
    CHARVAL    shift, and go to state 56
    ADD_ADD    shift, and go to state 57
    SUB_SUB    shift, and go to state 58
    READLN     shift, and go to state 59
    WRITELN    shift, and go to state 60
    '-'        shift, and go to state 61
    '!'        shift, and go to state 62
    '('        shift, and go to state 63

    Expression  go to state 81


State 58

   73 Expression: SUB_SUB . Expression

    INTVAL     shift, and go to state 52
    FLOATVAL   shift, and go to state 53
    STRINGVAL  shift, and go to state 54
    ID         shift, and go to state 55
    CHARVAL    shift, and go to state 56
    ADD_ADD    shift, and go to state 57
    SUB_SUB    shift, and go to state 58
    READLN     shift, and go to state 59
    WRITELN    shift, and go to state 60
    '-'        shift, and go to state 61
    '!'        shift, and go to state 62
    '('        shift, and go to state 63

    Expression  go to state 82


State 59

   81 Expression: READLN . '(' Expression ')'

    '('  shift, and go to state 83


State 60

   80 Expression: WRITELN . '(' Expression ')'

    '('  shift, and go to state 84


State 61

   71 Expression: '-' . Expression

    INTVAL     shift, and go to state 52
    FLOATVAL   shift, and go to state 53
    STRINGVAL  shift, and go to state 54
    ID         shift, and go to state 55
    CHARVAL    shift, and go to state 56
    ADD_ADD    shift, and go to state 57
    SUB_SUB    shift, and go to state 58
    READLN     shift, and go to state 59
    WRITELN    shift, and go to state 60
    '-'        shift, and go to state 61
    '!'        shift, and go to state 62
    '('        shift, and go to state 63

    Expression  go to state 85


State 62

   70 Expression: '!' . Expression

    INTVAL     shift, and go to state 52
    FLOATVAL   shift, and go to state 53
    STRINGVAL  shift, and go to state 54
    ID         shift, and go to state 55
    CHARVAL    shift, and go to state 56
    ADD_ADD    shift, and go to state 57
    SUB_SUB    shift, and go to state 58
    READLN     shift, and go to state 59
    WRITELN    shift, and go to state 60
    '-'        shift, and go to state 61
    '!'        shift, and go to state 62
    '('        shift, and go to state 63

    Expression  go to state 86


State 63

   76 Expression: '(' . Expression ')'

    INTVAL     shift, and go to state 52
    FLOATVAL   shift, and go to state 53
    STRINGVAL  shift, and go to state 54
    ID         shift, and go to state 55
    CHARVAL    shift, and go to state 56
    ADD_ADD    shift, and go to state 57
    SUB_SUB    shift, and go to state 58
    READLN     shift, and go to state 59
    WRITELN    shift, and go to state 60
    '-'        shift, and go to state 61
    '!'        shift, and go to state 62
    '('        shift, and go to state 63

    Expression  go to state 87


State 64

   51 Expression: Expression . '=' Expression
   52           | Expression . '+' Expression
   53           | Expression . '-' Expression
   54           | Expression . '*' Expression
   55           | Expression . '/' Expression
   56           | Expression . '~' Expression
   57           | Expression . ADD_ASS Expression
   58           | Expression . SUB_ASS Expression
   59           | Expression . MUL_ASS Expression
   60           | Expression . DIV_ASS Expression
   61           | Expression . CAT_ASS Expression
   62           | Expression . AND_AND Expression
   63           | Expression . OR_OR Expression
   64           | Expression . EQ Expression
   65           | Expression . NEQ Expression
   66           | Expression . '>' Expression
   67           | Expression . '<' Expression
   68           | Expression . GE Expression
   69           | Expression . LE Expression
   74           | Expression . ADD_ADD
   75           | Expression . SUB_SUB
   79           | Expression . '[' Expression ']'
  111 Declarator: ID '=' Expression .  [',', ';']

    ADD_ADD  shift, and go to state 88
    SUB_SUB  shift, and go to state 89
    '='      shift, and go to state 90
    ADD_ASS  shift, and go to state 91
    SUB_ASS  shift, and go to state 92
    MUL_ASS  shift, and go to state 93
    DIV_ASS  shift, and go to state 94
    CAT_ASS  shift, and go to state 95
    OR_OR    shift, and go to state 96
    AND_AND  shift, and go to state 97
    EQ       shift, and go to state 98
    NEQ      shift, and go to state 99
    '<'      shift, and go to state 100
    LE       shift, and go to state 101
    '>'      shift, and go to state 102
    GE       shift, and go to state 103
    '+'      shift, and go to state 104
    '-'      shift, and go to state 105
    '~'      shift, and go to state 106
    '*'      shift, and go to state 107
    '/'      shift, and go to state 108
    '['      shift, and go to state 109

    $default  reduce using rule 111 (Declarator)


State 65

   14 FunctionDefination: BasicType ID '(' ')' . ComposeStatement
   87 FunctionDeclaration: BasicType ID '(' ')' .  [';']

    '{'  shift, and go to state 72

    $default  reduce using rule 87 (FunctionDeclaration)

    ComposeStatement  go to state 110


State 66

   85 FunctionDeclaration: BasicType ID '(' PrototypeParameters . ')'
   92 PrototypeParameters: PrototypeParameters . ',' PrototypeParameter

    ','  shift, and go to state 74
    ')'  shift, and go to state 111


State 67

   15 FunctionDefination: BasicType ID '(' Parameters . ')' ComposeStatement
   86 FunctionDeclaration: BasicType ID '(' Parameters . ')'
   94 Parameters: Parameters . ',' Parameter

    ','  shift, and go to state 76
    ')'  shift, and go to state 112


State 68

  106 ArrayType: '[' INTVAL ']' .

    $default  reduce using rule 106 (ArrayType)


State 69

   16 FunctionDefination: BasicType ArrayType ID '(' . ')' ComposeStatement
   17                   | BasicType ArrayType ID '(' . Parameters ')' ComposeStatement
   88 FunctionDeclaration: BasicType ArrayType ID '(' . ')'
   89                    | BasicType ArrayType ID '(' . PrototypeParameters ')'
   90                    | BasicType ArrayType ID '(' . Parameters ')'

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    CHAR   shift, and go to state 5
    ')'    shift, and go to state 113

    PrototypeParameters  go to state 114
    Parameters           go to state 115
    Parameter            go to state 49
    PrototypeParameter   go to state 50
    BasicType            go to state 51


State 70

  107 ArrayType: ArrayType '[' INTVAL . ']'

    ']'  shift, and go to state 116


State 71

  109 Declarators: Declarators ',' Declarator .

    $default  reduce using rule 109 (Declarators)


State 72

   18 ComposeStatement: '{' . '}'
   19                 | '{' . LocalStatementList '}'

    INTVAL     shift, and go to state 52
    FLOATVAL   shift, and go to state 53
    STRINGVAL  shift, and go to state 54
    ID         shift, and go to state 55
    CHARVAL    shift, and go to state 56
    BREAK      shift, and go to state 117
    CONTINUE   shift, and go to state 118
    RETURN     shift, and go to state 119
    IF         shift, and go to state 120
    WHILE      shift, and go to state 121
    DO         shift, and go to state 122
    SWITCH     shift, and go to state 123
    FOR        shift, and go to state 124
    CONST      shift, and go to state 2
    INT        shift, and go to state 3
    FLOAT      shift, and go to state 4
    CHAR       shift, and go to state 5
    ADD_ADD    shift, and go to state 57
    SUB_SUB    shift, and go to state 58
    READLN     shift, and go to state 59
    WRITELN    shift, and go to state 60
    '-'        shift, and go to state 61
    '!'        shift, and go to state 62
    '('        shift, and go to state 63
    ';'        shift, and go to state 125
    '}'        shift, and go to state 126

    LocalStatementList   go to state 127
    LocalStatement       go to state 128
    Expression           go to state 129
    VariableDeclaration  go to state 130
    BasicType            go to state 131


State 73

   13 FunctionDefination: VOID ID '(' ')' ComposeStatement .

    $default  reduce using rule 13 (FunctionDefination)


State 74

   92 PrototypeParameters: PrototypeParameters ',' . PrototypeParameter

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    CHAR   shift, and go to state 5

    PrototypeParameter  go to state 132
    BasicType           go to state 133


State 75

   82 FunctionDeclaration: VOID ID '(' PrototypeParameters ')' .

    $default  reduce using rule 82 (FunctionDeclaration)


State 76

   94 Parameters: Parameters ',' . Parameter

    INT    shift, and go to state 3
    FLOAT  shift, and go to state 4
    CHAR   shift, and go to state 5

    Parameter  go to state 134
    BasicType  go to state 135


State 77

   12 FunctionDefination: VOID ID '(' Parameters ')' . ComposeStatement
   83 FunctionDeclaration: VOID ID '(' Parameters ')' .  [';']

    '{'  shift, and go to state 72

    $default  reduce using rule 83 (FunctionDeclaration)

    ComposeStatement  go to state 136


State 78

   96 Parameter: BasicType ID .

    $default  reduce using rule 96 (Parameter)


State 79

   95 Parameter: BasicType ArrayType . ID
   98 PrototypeParameter: BasicType ArrayType .  [',', ')']
  107 ArrayType: ArrayType . '[' INTVAL ']'

    ID   shift, and go to state 137
    '['  shift, and go to state 41

    $default  reduce using rule 98 (PrototypeParameter)


State 80

   77 Expression: ID '(' . ')'
   78           | ID '(' . Arguments ')'

    INTVAL     shift, and go to state 52
    FLOATVAL   shift, and go to state 53
    STRINGVAL  shift, and go to state 54
    ID         shift, and go to state 55
    CHARVAL    shift, and go to state 56
    ADD_ADD    shift, and go to state 57
    SUB_SUB    shift, and go to state 58
    READLN     shift, and go to state 59
    WRITELN    shift, and go to state 60
    '-'        shift, and go to state 61
    '!'        shift, and go to state 62
    '('        shift, and go to state 63
    ')'        shift, and go to state 138

    Arguments   go to state 139
    Expression  go to state 140


State 81

   51 Expression: Expression . '=' Expression
   52           | Expression . '+' Expression
   53           | Expression . '-' Expression
   54           | Expression . '*' Expression
   55           | Expression . '/' Expression
   56           | Expression . '~' Expression
   57           | Expression . ADD_ASS Expression
   58           | Expression . SUB_ASS Expression
   59           | Expression . MUL_ASS Expression
   60           | Expression . DIV_ASS Expression
   61           | Expression . CAT_ASS Expression
   62           | Expression . AND_AND Expression
   63           | Expression . OR_OR Expression
   64           | Expression . EQ Expression
   65           | Expression . NEQ Expression
   66           | Expression . '>' Expression
   67           | Expression . '<' Expression
   68           | Expression . GE Expression
   69           | Expression . LE Expression
   72           | ADD_ADD Expression .  [',', '=', ADD_ASS, SUB_ASS, MUL_ASS, DIV_ASS, CAT_ASS, OR_OR, AND_AND, EQ, NEQ, '<', LE, '>', GE, '+', '-', '~', '*', '/', ']', ')', ';', ':']
   74           | Expression . ADD_ADD
   75           | Expression . SUB_SUB
   79           | Expression . '[' Expression ']'

    ADD_ADD  shift, and go to state 88
    SUB_SUB  shift, and go to state 89
    '['      shift, and go to state 109

    $default  reduce using rule 72 (Expression)


State 82
